Realization of getting and uploading albumsData, binding collections of albums and artists

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,6 @@
 .idea/
 .DS_Store/
+public/uploads/images/artists/*
+public/uploads/images/albums/*
+!public/uploads/images/artists/.gitkeep
+!public/uploads/images/albums/.gitkeep
